# enclave

./: .ansible-lint  .coderabbit.yaml  .gitignore  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.ci  OWNERS  README.md  ansible.cfg  ansible_collections.sha256  ansible_collections.txt  ansible_pip_requirements.txt  bootstrap.sh  enable_ai.sh  pyproject.toml  requirements.yml  setup_ansible.sh  setup_env.sh  sync.sh  upgrade.sh  validations.sh
.claude/knowledge/: README.md  ansible-jinja-gotchas.md  catalog-source-naming.md  config-schema-sync.md  connected-auto-mce.md  disconnected-plugin-mirroring.md  enclave-cli-path.md  enclave-reconcile-redundant-flags.md  github-actions-security-checklist.md  infraenv-discovery-gotchas.md  ironic-metal3-lifecycle.md  jira-cli-debug-warning.md  k8s-info-fail-open.md  loop-label-sensitive-data.md  operators-schema-duplication.md  plugin-e2e-coverage.md  remote-plugin-design-decisions.md  tls-cert-test-coverage-gap.md  updateservice-ca-trust.md
.githooks/: README.md  prepare-commit-msg
.github/: TRIGGER_CAPTURE_INFRA  actionlint.yaml  labeler.yml
.github/workflows/: Dockerfile.ci  build-push-tarball.yml  cherry-pick.yml  ci-image.yml  cleanup.yml  disconnected-dry-run.yml  e2e-deployment-rc.yml  e2e-deployment.yml  e2e-nvidia.yml  e2e-odf-schedule.yml  e2e-openshift-ai.yml  e2e-osac-plugin.yml  e2e-osac-schedule.yml  e2e-osac.yml  egress-capture.yml  infra-verify.yml  labeler.yml  mirror-main-0-rc.yml  nightly-e2e-connected.yml  (+5 more)
catalogs/: certified.yaml  redhat.yaml
config/: README.md  certificates.example.yaml  cloud_infra.example.yaml  global.example.yaml  global.validation.yaml  nvidia.yaml.example  openshift-ai.yaml.example
defaults/: catalogs.yaml  content_images.yaml  control_binaries.yaml  deployment.yaml  k8s.yaml  lvms_operator.yaml  mirror_registry.yaml  model_operators.yaml  oc_mirror.yaml  operators.yaml  platforms.yaml  quay_operator.yaml  storage_operators.yaml  vmaas_operators.yaml
docs/: CI_RUNNER_SETUP.md  CI_WORKFLOWS.md  COMPARISON_SPLIT.md  CONFIGURATION_REFERENCE.md  DEPLOYMENT_GUIDE.md  LOCAL_TESTING.md  OC_MIRROR_PROGRESS.md  ODF_CEPH_CI.md  OSAC_DEPLOYMENT.md  PLUGIN_ARCHITECTURE.md  QUAY_OAUTH_TOKEN_REGEN.md  UPGRADE.md
experiences/: README.md
hack/: agent-gate-inject.py  cluster_upgrade.py  operator_update.py
must-gather/: README.md  gather.sh  gather_cluster.sh  gather_lz.sh
partner-install/: start.sh
playbooks/: 01-prepare.yaml  02-mirror-split.yaml  02-mirror.yaml  02a-mirror-core.yaml  02b-mirror-operators.yaml  03-deploy.yaml  04-post-install.yaml  05-operators.yaml  06-day2.yaml  07-configure-discovery.yaml  08-openshift-ai.yaml  09-nvidia.yaml  10-enable_ai.yaml  SPLIT-MIRRORING.md  deploy-plugin.yaml  main-split.yaml  main.yaml  upgrade.yaml  validate-schema.yaml  validate-templates.yaml  wait-operator-mirror.yaml  wait_operator_mirror.yaml  write-migration-tasks.yaml
plugins/: README.md  lvms.yaml  odf.yaml
reconcile/: cli.py  cluster_upgrade.py  operator_versions.py  quay_registry_ca.py
schemas/: catalog.yaml  catalogs.yaml  certificates.yaml  cloud_infra.yaml  content_images.yaml  control_binaries.yaml  definitions.yaml  deployment.yaml  expeience.yaml  global.yaml  k8s.yaml  lvms_operator.yaml  mirror_registry.yaml  oc_mirror.yaml  operators.yaml  platforms.yaml  plugin.yaml  quay_operator.yaml  variables.yaml
scripts/: README.md  allocate_subnet.sh  cleanup.sh  collect_ci_artifacts.sh  configure_devscripts.sh  deploy_cluster.sh  deploy_phase.sh  generate_cluster_name.sh  generate_enclave_vars.sh  generate_environment_json.sh  get_landing_zone_ip.sh  install_enclave.sh  operator_update.py  provision_landing_zone.sh  setup_working_dir.sh  start_sushy_tools.sh  verify_cleanup.sh  verify_cluster.sh  verify_enclave_installation.sh  verify_infrastructure.sh  verify_landing_zone.sh  verify_networks.sh  with_libvirt_lock.sh
src/: cli.py  utils.py
templates/: acm-operatorpolicy.yaml.j2  agent-config.yaml.j2  imagesetconfiguration-core.yaml.j2  imagesetconfiguration-nvidia.yaml.j2  imagesetconfiguration-openshift-ai.yaml.j2  imagesetconfiguration-post.yaml.j2  imagesetconfiguration.yaml.j2  install-config-connected.yaml.j2  install-config-disconnected.yaml.j2  pinnedimageset.yaml.j2  plugin-imageset.yaml.j2  registries.conf.j2
(+620 files in other folders)
