[project]
name = "enclave"
version = "0.1.0"
description = "The Red Hat Sovereign Enclave (RHSE)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = "==3.12.*"
dependencies = [
    "ansible-core ==2.16.14",
    "cachetools ==6.2.2",
    "certifi ==2025.11.12",
    "click ==8.3.3",
    "durationpy ==0.10",
    "google-auth ==2.53.0",
    "jsonschema ==4.26.0",
    "kubernetes ==33.1.0",
    "oauthlib ==3.2.2",
    "pyasn1 ==0.6.3",
    "pyasn1-modules ==0.4.2",
    "pyyaml ==6.0.3",
    "requests-oauthlib ==2.0.0",
    "rpds-py ==0.30.0",
    "rsa ==4.9.1",
    "requests ==2.34.2",
    "websocket-client ==1.9.0",
]

[project.scripts]
enclave-reconcile = "reconcile.cli:cli"

[dependency-groups]
dev = [
    "ansible-lint ==26.4.0",
    "anymarkup ==0.8.1",
    "mypy ==1.20.2",
    "pytest ==9.0.3",
    "pytest-cov ==7.1.0",
    "pytest-mock ==3.15.1",
    "ruff ==0.15.12",
    "yamllint ==1.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["reconcile", "defaults/operators.yaml", "defaults/platforms.yaml"]

[tool.hatch.build.targets.wheel]
only-include = ["reconcile", "defaults/operators.yaml", "defaults/platforms.yaml"]

[tool.ruff]
line-length = 88
src = ["reconcile"]
extend-exclude = [
    ".local",
    ".cache",
    "tmp",
    ".venv",
    "collections",
]

[tool.ruff.lint]
preview = true
# Enable all rules, then selectively disable below
select = ["ALL"]
ignore = [
    "CPY",     # Missing copyright header
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D203",    # 1 blank line required before class docstring
    "D211",    # No blank lines allowed before class docstring
    "D212",    # multi-line-summary-first-line
    "D213",    # multi-line-summary-second-line
    "D4",      # Docstring style
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments (some functions need descriptive params)
    "PLR0917", # Too many positional arguments (Click commands need one param per option)
    "S404",    # subprocess import
    "S603",    # subprocess call (we call oc with known args)
    "S607",    # partial executable path (oc is expected on PATH)
    "EM101",   # Exception must not use a string literal
    "EM102",   # Exception must not use an f-string literal
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY300",  # try-consider-else
    "FBT001",  # Boolean positional arg (Click uses these)
    "FBT002",  # Boolean default value (Click uses these)
    # pydoclint
    "DOC",
    # May conflict with the formatter
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"reconcile/tests/**" = [
    "PLR2004", # magic values in test assertions are readable without named constants
    "S101",    # assert is idiomatic in pytest
    "PLC1901", # empty-string comparisons are fine in test assertions
    "PLR6301", # test methods don't need to use self
]
"reconcile/tests/fixtures.py" = [
    "ANN401",  # anymarkup.parse returns Any; no tighter type available
]

[tool.ruff.lint.isort]
known-first-party = ["reconcile"]
combine-as-imports = true

[tool.mypy]
files = ["reconcile"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["anymarkup"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90

[tool.pytest.ini_options]
testpaths = ["reconcile/tests"]

